crates/analyzer/tests/snapshots/errors__overflow_i16_neg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `i16`
  ┌─ [snippet]:3:7
  │
3 │   i16(-32769)
  │       ^^^^^^ does not fit into type `i16`


